--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -1,3 +1,47 @@
+.banner-main {
+	background-image: url("/assets/images/banner.png") ;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-color: $primary-400;	
+	padding: 152px 0; /*期望400，400-248*/
+	text-align: left;
+	
+
+}
+
+.banner-main-content .container{
+    margin-left: 15%;
+    height: auto;
+    
+}
+
+.banner-main-content{
+  margin-left: 15%;
+}
+
+.text-neutral-0{
+  color: #FFFFFF;
+}
+
+.display1 {
+    font-size: 64px;
+    font-weight: 700;
+    line-height: 1.2;
+    color: #FFFFFF;
+    
+}
+
+.display2{
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 1.2;
+}
+
+.text-center {
+    text-align: center;
+}
+
 .product{
 
   position: relative;
@@ -140,3 +184,116 @@ position: relative;
   background-color: $primary-300;
   
 }
+
+
+img{
+  vertical-align: middle;
+    max-width: 100%;
+    height: auto;
+}
+
+.inspiration-col-4 {
+    width: 33.3333333333%;
+    padding: 4px;
+}
+
+.inspiration-row {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -4px;
+}
+
+.inspiration-col-6 {
+    width: 50%;
+    padding: 4px;
+}
+
+.inspiration-col-12 {
+    width: 100%;
+    padding: 4px;
+}
+
+.mb-4 {
+    margin-bottom: 16px;
+}
+
+@media (max-width: 768px) {
+    .inspiration-row {
+        flex-wrap: nowrap;
+        margin: 0 -8px;
+    }
+}
+
+@media (max-width: 768px) {
+    .inspiration-row img {
+        min-width: 300px;
+    }
+}
+
+.banner-main-content {
+    justify-content: start;
+}
+
+@media (max-width: 768px) {
+    .inspiration-col-4, .inspiration-col-6, .inspiration-col-12 {
+        width: unset;
+        padding: 0 8px;
+    }
+        .display2-md {
+        font-size: 48px;
+
+}
+}
+
+.py-64{
+  padding-top: 64px;
+  padding-bottom: 64px;
+}
+
+@media (max-width: 768px) {
+    .py-md-10 {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .banner-main-sm {
+	background-image: url("/assets/images/banner-sm.png") ;
+      height: auto;
+}
+    
+    .mb-md-3{
+      padding-bottom: 10px;
+    }
+    .mb-md-2{
+      padding-bottom: 2px;
+    }
+    .mb-md-6{
+      padding-bottom: 6px;
+    }
+    
+    .py-64{
+      padding-top: 10px;
+      padding-bottom: 64px;
+      .mb-md-24{
+        margin-bottom: 24px;
+      }
+    
+}
+}
+
+.mb-32{
+  margin-bottom: 32px;
+}
+
+.mb-10{
+  margin-bottom: 10px;
+}
+
+.mb-12{
+  margin-bottom: 12px;
+}
+
+
+
+
+
+
